// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea default 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = false 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: none;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = none 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: none;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = true 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea resizes with prop resize = vertical 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea should accept disabled 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
  background: #F5F6F7;
  color: #939BA5;
  cursor: default;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 textarea:hover {
  border-color: #DEE1E5;
}

<div
  className="c0"
>
  <textarea
    disabled={true}
    id="TextAreaID"
  />
</div>
`;

exports[`TextArea with an error validation 1`] = `
.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #CC1F36;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 svg {
  height: 100%;
  width: 100%;
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .c1 {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
  border-color: #ED3B53;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0 textarea:hover {
  border-color: #CC1F36;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

<div
  className="c0"
>
  <textarea
    aria-invalid="true"
    id="TextAreaID"
  />
  <div
    aria-hidden={true}
    className="c1 c2"
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`TextArea with placeholder 1`] = `
.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  position: relative;
  width: 100%;
}

.c0 .sc-bdnylx {
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c0 textarea {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  min-height: 6.25rem;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  resize: vertical;
  width: 100%;
}

.c0 textarea:hover {
  border-color: #C1C6CC;
}

.c0 textarea:focus,
.c0 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
>
  <textarea
    id="TextAreaID"
    placeholder="this is a placeholder"
  />
</div>
`;
